# simplefs

./: .editorconfig  .gitignore  Cargo.toml  README.md  Vagrantfile
.github/workflows/: action.yaml  ci.yaml  test.yaml
examples/: Cargo.toml
fileblock/: Cargo.toml
fileblock/src/: blockio.rs  emulator.rs  inode.rs  lib.rs  simplefs.rs
scripts/: debian-bootstrap.sh
simplefs/: Cargo.toml
simplefs-fuse/: Cargo.toml  build.rs  wrapper.h
simplefs-fuse/examples/: hello.rs
simplefs-fuse/src/: lib.rs
simplefs/examples/: emu.rs  hello.rs
simplefs/src/: alloc.rs  emulator.rs  fs.rs  lib.rs  node.rs  sb.rs
simplefs/src/io/: block.rs  diskemu.rs  file.rs  mod.rs
simplefs/tests/: fs_test.rs
